feat: Refine animations and team member names
Adjusted animation durations and easing for smoother transitions. Updated team member names to their Westernized spellings for consistency.

--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
             },
             animation: {
               'float': 'float 6s ease-in-out infinite',
-              'fade-in-up': 'fadeInUp 0.8s ease-out forwards',
+              'fade-in-up': 'fadeInUp 0.7s cubic-bezier(0.2, 0.8, 0.2, 1) forwards',
               'pulse-slow': 'pulse 3s cubic-bezier(0.4, 0, 0.6, 1) infinite',
+              'grow': 'grow 2s cubic-bezier(0.4, 0, 0.2, 1) forwards',
             },
             keyframes: {
               float: {
@@ -42,8 +43,12 @@
                 '50%': { transform: 'translateY(-10px)' },
               },
               fadeInUp: {
-                '0%': { opacity: '0', transform: 'translateY(20px)' },
+                '0%': { opacity: '0', transform: 'translateY(24px)' },
                 '100%': { opacity: '1', transform: 'translateY(0)' },
+              },
+              grow: {
+                '0%': { width: '0%' },
+                '100%': { width: '100%' }
               }
             }
           }
